src/test/ui/where-clauses/where-eq-rnd-params.stderr
error[E0308]: mismatched types
  --> $DIR/where-eq-rnd-params.rs:6:5
   |
LL | pub fn foo<A,B>(a: A) -> B
   |            - -           - expected `B` because of return type
   |            | |
   |            | expected type parameter
   |            found type parameter
...
LL |     a
   |     ^ expected type parameter `B`, found type parameter `A`
   |
   = note: expected type parameter `B`
              found type parameter `A`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
